Added tables and form

--- a/studentFiles/marissaSmith/index.html
+++ b/studentFiles/marissaSmith/index.html
@@ -23,6 +23,85 @@
         <li>Follow an assembly line</li>
         <li>Choose interesting flavors</li>
     </ul>
+<br> <br>
+    <p>Table of Student Data</p>
+<table border=""1">
+    <tr>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Hobby</th>
+        <th>Favorite Food</th>
+        <th>Zodiac Sign</th>
+    </tr>
+    <tr>
+        <td>Brittany</td>
+        <td>Warnock</td>
+        <td>Concerts</td>
+        <td>Tacos</td>
+        <td>Pisces</td>
+    </tr>
+    <tr>
+        <td>Marissa</td>
+        <td>Smith</td>
+        <td>Reading</td>
+        <td>Spagetti</td>
+        <td>Pisces</td>
+    </tr>
+
+</table>
+
+<p>Invoice</p>
+<table border="1" cellspacing="0" cellpadding="2">
+    <tr>
+        <th width="200">Item / Desc.</th>
+        <th>Qty.</th>
+        <th>@</th>
+        <th align="right">Price</th>
+    </tr>
+    <tr>
+        <td>Paperclips (Box)</td>
+        <td>100</td>
+        <td>1.15</td>
+        <td align="right">115.00</td>
+    </tr>
+    <tr>
+        <td>Paper (Case)</td>
+        <td>10</td>
+        <td>45.99</td>
+        <td align="right">459.90</td>
+    </tr>
+    <tr>
+        <td>Wastepaper Baskets</td>
+        <td>2</td>
+        <td>17.99</td>
+        <td align="right">35.98</td>
+    </tr>
+    <tr>
+        <td colspan="3">Subtotal</td>
+        <td align="right">610.88</td>
+    </tr>
+    <tr>
+        <td colspan="2">Tax</td>
+        <td>7%</td>
+        <td align="right">42.76</td>
+    </tr>
+    <tr>
+        <td colspan="3">Total</td>
+        <td align="right">653.64</td>
+    </tr>
+
+</table>
+<br><br>
+    <p>RSVP Response</p>
+<form method="get" action="">
+    <input type="text" name="name" placeholder="Name">
+    <input type="text" name="phone" placeholder="Phone Number">
+    <input type="email" name="email" placeholder="Email">
+    <p>RSVP?</p>
+    <input type="radio" name="rsvp" id="RadioY" value="Yes"> <label for="RadioY">Yes</label><br>
+    <input type="radio" name="rsvp" id="RadioN" value="No"> <label for="RadioN">No</label><br>
+    <input type="submit" value="Submit Information">
+</form>
 
 </body>
 </html>
