added tables and form

--- a/studentFiles/brittanyWarnock/index.html
+++ b/studentFiles/brittanyWarnock/index.html
@@ -30,5 +30,84 @@
         <li>Ronald McDonald House</li>
         <li>Camp Kesem</li>
     </ul>
+<br>
+<table border="1">
+    <tr><th>First Name</th>
+        <th>Last Name</th>
+        <th>Hobby</th>
+        <th>Favorite Food</th>
+        <th>Zodiac Sign</th>
+    </tr>
+    <tr><td>Marissa</td>
+        <td>Smith</td>
+        <td>Reading</td>
+        <td>Spaghetti</td>
+        <td>Pisces</td>
+    </tr>
+    <tr>
+        <td>Brittany</td>
+        <td>Warnock</td>
+        <td>Concerts</td>
+        <td>Tacos</td>
+        <td>Pisces</td>
+
+    </tr>
+
+</table>
+<br>
+<br>
+<table border="2"
+       <tr>
+           <th>Item/Desc.</th>
+           <th>Qty.</th>
+           <th>@</th>
+           <th>Price</th>
+       </tr>
+    <tr>
+        <td>Paperclips (Box)</td>
+        <td>100</td>
+        <td>1.15</td>
+        <td>115.00</td>
+    </tr>
+    <tr>
+        <td>Paper (Case)</td>
+        <td>10</td>
+        <td>45.99</td>
+        <td>459.00</td>
+    </tr>
+    <tr>
+        <td>Wastepaper Baskets</td>
+        <td>2</td>
+        <td>17.99</td>
+        <td>35.98</td>
+    </tr>
+    <tr>
+        <th align="left" colspan="3">Subtotal</th>
+        <td>610.88</td>
+    </tr>
+    <tr>
+        <th align="left" colspan="2">Tax</th>
+        <td>7%</td>
+        <td>42.76</td>
+    </tr>
+    <tr>
+        <th align="left" colspan="3">Total</th>
+        <td>653.64</td>
+</tr>
+</table>
+<br>
+<br>
+<form action="" method="POST">
+    <input id="Name" type="text" name="Name" placeholder="Name"> <br>
+    <input id="Phone" type="text" name="Phone" placeholder="Phone"> <br>
+    <input id="Email" type="email" name="Email" placeholder="Email">
+    <br>
+<label for="RSVP">Will you attend?:</label>
+<input id="RSVP" type="radio" value="Yes">Yes
+<input id="RSVP" type="radio" value="No">No
+    <br>
+    <input type="submit" value="Submit">
+</form>
+
 </body>
 </html>
