Changed index to be a website and added a image

--- a/studentFiles/justinCarver/index.html
+++ b/studentFiles/justinCarver/index.html
@@ -1,5 +1,11 @@
-<p> This is hello world </p>
-
-<h1> Hello World! </h1>
-
-<body> Look at me mom, I'm awesome! </body>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Hello World!</title>
+</head>
+	<body>
+		<img src="img/me.jpg" height="200" />
+		<h1>Justin Carver</h1>
+			<p>Look at me mom, I'm awesome!</p>
+	</body>
+</html>
