--- a/studentFiles/justinCarver/index.html
+++ b/studentFiles/justinCarver/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello World!</title>
+	<title>Justin Carver's Super Awesome Resume!</title>
 </head>
 	<body>
 		<img src="img/me.jpg" height="200" />
-		<h1>Justin Carver</h1>
-			<p>Look at me mom, I'm awesome!</p>
+		<h1>Justin Carver's Super Awesome Resume!</h1>
+			<h2> Work History </h2>
+				<ul>
+				<li> Tonyburgers </li>
+				<li> Turf Sports Inc. </li>
+				<li> Other awesome comapny </li>
+				</ul>
 	</body>
 </html>
