Added education list

--- a/studentFiles/justinCarver/index.html
+++ b/studentFiles/justinCarver/index.html
@@ -6,11 +6,17 @@
 	<body>
 		<img src="img/me.jpg" height="200" />
 		<h1>Justin Carver's Super Awesome Resume!</h1>
+			<h2>Education</h2>
+				<ul>
+					<li> Dev Mountain </li>
+					<li> SLCC - Current </li>
+				</ul>
 			<h2> Work History </h2>
 				<ul>
-				<li> Tonyburgers </li>
-				<li> Turf Sports Inc. </li>
-				<li> Other awesome comapny </li>
+					<li> Tonyburgers </li>
+					<li> Turf Sports Inc. </li>
+					<li> Other awesome comapny </li>
 				</ul>
+			<h2></h2>
 	</body>
 </html>
