--- a/studentFiles/elizabethKauffman/index.html
+++ b/studentFiles/elizabethKauffman/index.html
@@ -7,9 +7,23 @@
 	<img src= "" width="">
 	<h1>Elizabeth Kauffman</h1>
 	<h2>Education</h2>
+		<p>Bachelor of Arts in Fine Art</p>
 		<p>William Jewell College</p>
+		<p>Liberty, Missouri</p>
+
+	<h2>Skills and Abilities</h2>
+		<ul>
+			<li>Adobe Creative Suite 6</li>
+			<li>HTML</li>
+			<li>Ability to collaborate with team members</li>
+			<li>Possess strong conceptual skills, high level sense of design, a broad thinker who is able to offer
+			a variety of design solutions</li>
+			<li>I exhibit a professional and positive example to others</li></ul>
 	<h2>Work History</h2>
-	<p>ADP 2011 to 2018</p>
+	<p>ADP  GRAPHIC DESIGNER</p>
+	<P>7/2011 to 2/2018</p>
+		<UL>
+			<li>Creates graphics for the Internet. May design, modify, enhance and/or update web pages. Create a variety of solutions for given design problems which include: postcards, posters, web based enrollment guides and printed guides</li>
 	<p>EPG 2009 to 2011</p>
 	<p>Spangle Web Design</p>
 </body>
