--- a/studentFiles/elizabethKauffman/index.html
+++ b/studentFiles/elizabethKauffman/index.html
@@ -4,7 +4,7 @@
 	<title></title>
 </head>
 <body>
-	<img src= "" width="">
+	<img src= "IMAG0061(2).jpg" alt="">
 	<h1>Elizabeth Kauffman</h1>
 	<h2>Education</h2>
 		<p>Bachelor of Arts in Fine Art</p>
