--- a/studentFiles/elizabethKauffman/index.html
+++ b/studentFiles/elizabethKauffman/index.html
@@ -23,8 +23,15 @@
 	<p>ADP  GRAPHIC DESIGNER</p>
 	<P>7/2011 to 2/2018</p>
 		<UL>
-			<li>Creates graphics for the Internet. May design, modify, enhance and/or update web pages. Create a variety of solutions for given design problems which include: postcards, posters, web based enrollment guides and printed guides</li>
-	<p>EPG 2009 to 2011</p>
-	<p>Spangle Web Design</p>
+			<li>Creates graphics for the Internet. May design, modify, enhance and/or update web pages. Create a
+				variety of solutions for given design problems which include: postcards, posters, web based
+				enrollment guides and printed guides</li>
+			<li>Create personalized benefit worksheets and confirmation statements using HP Exstream</li></UL>
+			<p>EPG GRAPHIC DESIGNER</p>
+			<p>2009 to 2011</p>
+			<ul><li>Developed and implemented designs for company website</li>
+			<li>Created covers for proposals and marketing brochures, flyers</li>
+			</ul>
+			<p>Spangle Web Design</p>
 </body>
 </html>
