Changed Weber state

--- a/studentFiles/justinCarver/index.html
+++ b/studentFiles/justinCarver/index.html
@@ -10,6 +10,7 @@
 				<ul>
 					<li> Dev Mountain </li>
 					<li> SLCC - Current </li>
+					<li> Weber State </li>
 				</ul>
 			<h2> Work History </h2>
 				<ul>
