--- a/studentFiles/justinCarver/index.html
+++ b/studentFiles/justinCarver/index.html
@@ -9,8 +9,8 @@
 			<h2>Education</h2>
 				<ul>
 					<li> Dev Mountain </li>
+					<li> Weber State University </li>
 					<li> SLCC - Current </li>
-					<li> Weber State </li>
 				</ul>
 			<h2> Work History </h2>
 				<ul>
