--- a/studentFiles/jennaBeesley/Index.html
+++ b/studentFiles/jennaBeesley/Index.html
@@ -4,11 +4,14 @@
 	<title></title>
 </head>
 <body>
-	<img src="img/me.png">
+	<img src="picture.jpg" style="width:150px">
 	<h1>Jenna Beesley</h1>
-		<p>1342 Maplewood Dr Murray UT 84121</p>
+		<p>1342 Maplewood Dr<br>
+				Murray UT, 84121</p>
 	<h2>Education</h2>
-		<p>lorem</p>
+		<p>University of Phoenix<br>
+			B.S. Finance, 2010 <br>
+			B.S. Business Management, 2010</p>
 	<h3>Work History</h3>
 		<ul>
 			<li>Silicon Valley Bank</li>
