--- a/studentFiles/justinCarver/index.html
+++ b/studentFiles/justinCarver/index.html
@@ -13,10 +13,11 @@
 					<li> SLCC - Current </li>
 				</ul>
 			<h2> Work History </h2>
+			<h2></h2>
 				<ul>
 					<li> Tonyburgers </li>
 					<li> Turf Sports Inc. </li>
-					<li> Other awesome comapny </li>
+					<li> Senawave </li>
 				</ul>
 			<h2></h2>
 	</body>
