--- a/studentFiles/elizabethKauffman/HTML Projects/Form.html
+++ b/studentFiles/elizabethKauffman/HTML Projects/Form.html
@@ -1,4 +1,4 @@
-<table>
+<table cellpadding="5px">
 	<tr>
 		<td>Item/Desc.</td>
 		<td>Qty.</td>
@@ -41,8 +41,10 @@
 <Form>
 	<form action="" method="post">
 		<label>Name:</label>
-		<label>Phone:</label>
+		<input type="text" id="name" name="user_name">
 		<label>Email:</label>
+		<input type="Email" id="mail" name="user_mail">
+		
 		<label>Comments Box</label>
 	</form>
 </Form>
